--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
